// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAdminCourse creates a course 1`] = `
Object {
  "createAdminCourse": true,
}
`;

exports[`createAdminCourse creates a course that is not for free 1`] = `
Object {
  "createAdminCourse": true,
}
`;

exports[`createAdminCourse does not create a course if not admin 1`] = `
Array [
  [GraphQLError: No admin user.],
]
`;

exports[`createAdminCourse does not create a course if not authenticated 1`] = `
Array [
  [GraphQLError: Not authenticated as user.],
]
`;

exports[`createFreeCourse creates a course 1`] = `
Object {
  "createFreeCourse": true,
}
`;

exports[`createFreeCourse does not create a course if not authenticated 1`] = `
Array [
  [GraphQLError: Not authenticated as user.],
]
`;

exports[`createFreeCourse does not create a course if not free 1`] = `
Array [
  [GraphQLError: Not authenticated as user.],
]
`;
